Update Valentine's Day storybook with personalized content

--- a/valentine.html
+++ b/valentine.html
@@ -799,6 +799,21 @@
             I asked for your name because, honestly, I didn't even know it back then.
             That simple question opened the door to everything that would come after.
           </p>
+
+          <div class="highlight-box" style="margin-top: 25px;">
+            <p style="font-size: 1.1em; color: #ff4d6d; font-weight: bold; margin-bottom: 10px;">
+              🎵 The Rod Wave Connection
+            </p>
+            <p>
+              As we walked and talked, I noticed you were listening to Rod Wave. I asked if
+              Rod was your favorite artist, and you said you listen to his music.
+            </p>
+            <p style="margin-top: 10px;">
+              That's when I told you—he's my favorite artist too. It was such a small thing,
+              but it felt like a sign. We already had something in common, something that
+              connected us beyond just words.
+            </p>
+          </div>
         </div>
         <div class="page-number">4</div>
       </div>
