--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
       transform: translateX(-50%);
       display: flex;
       gap: 20px;
-      z-index: 101;
+      z-index: 1000;
+      touch-action: manipulation;
     }
 
     .nav-btn {
@@ -372,6 +373,10 @@
       cursor: pointer;
       box-shadow: 0 5px 15px rgba(255, 77, 109, 0.4);
       transition: all 0.3s ease;
+      touch-action: manipulation;
+      -webkit-tap-highlight-color: rgba(255, 77, 109, 0.3);
+      user-select: none;
+      -webkit-user-select: none;
     }
 
     .nav-btn:hover {
@@ -628,8 +633,15 @@
       }
 
       .nav-btn {
-        padding: 12px 25px;
+        padding: 15px 30px;
         font-size: 1em;
+        min-width: 120px;
+        min-height: 50px;
+      }
+
+      .nav-controls {
+        bottom: 20px;
+        gap: 15px;
       }
 
       .book {
@@ -1106,6 +1118,23 @@
     });
 
     nextBtn.addEventListener('click', () => {
+      if (currentPage < totalPages) {
+        currentPage++;
+        updatePage();
+      }
+    });
+
+    // Add touch event support for mobile devices
+    prevBtn.addEventListener('touchend', (e) => {
+      e.preventDefault();
+      if (currentPage > 1) {
+        currentPage--;
+        updatePage();
+      }
+    });
+
+    nextBtn.addEventListener('touchend', (e) => {
+      e.preventDefault();
       if (currentPage < totalPages) {
         currentPage++;
         updatePage();
