--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -355,6 +356,7 @@
     .nav-controls {
       position: fixed;
       bottom: 30px;
+      bottom: max(30px, env(safe-area-inset-bottom));
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -393,15 +395,18 @@
     .page-indicator {
       position: fixed;
       top: 30px;
+      top: max(30px, env(safe-area-inset-top));
       left: 50%;
       transform: translateX(-50%);
       color: white;
       font-size: 1em;
-      background: rgba(255, 77, 109, 0.8);
+      background: rgba(255, 77, 109, 0.9);
       padding: 10px 25px;
       border-radius: 25px;
-      z-index: 101;
+      z-index: 1001;
       backdrop-filter: blur(10px);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      font-weight: 600;
     }
 
     /* Custom scrollbar for pages */
@@ -646,6 +651,16 @@
 
       .book {
         height: 80vh;
+      }
+
+      .page-indicator {
+        top: 15px;
+        font-size: 0.9em;
+        padding: 8px 20px;
+      }
+
+      .storybook-container {
+        padding: 10px;
       }
     }
 
