Fix page content visibility: add proper padding to prevent content from being hidden behind page indicator

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       background: white;
       border-radius: 15px;
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
-      padding: 50px 40px;
+      padding: 80px 40px 60px 40px;
       overflow-y: auto;
       backface-visibility: hidden;
       transform-origin: left center;
@@ -255,6 +255,10 @@
       height: 100%;
       display: flex;
       flex-direction: column;
+      justify-content: flex-start;
+    }
+
+    .page[data-page="1"] .page-content {
       justify-content: center;
     }
 
@@ -613,7 +617,7 @@
       }
 
       .page {
-        padding: 30px 25px;
+        padding: 80px 25px 100px 25px;
       }
 
       .page h2 {
