Optimize mobile content visibility: increase padding and adjust page indicator

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
       }
 
       .page {
-        padding: 80px 25px 100px 25px;
+        padding: 100px 25px 120px 25px;
       }
 
       .page h2 {
@@ -626,6 +626,7 @@
 
       .page h3 {
         font-size: 1.3em;
+        margin-top: 0;
       }
 
       .page p {
@@ -658,9 +659,9 @@
       }
 
       .page-indicator {
-        top: 15px;
-        font-size: 0.9em;
-        padding: 8px 20px;
+        top: 10px;
+        font-size: 0.85em;
+        padding: 6px 18px;
       }
 
       .storybook-container {
